tests/errors/prints-print.ja
procedure main()
  print("hej")
  print("hej igen")
